frontend/src/assets/stylesheets/spot_index.css
@import 'variables.css';

.spot-index-wrapper {
  display: flex;
  flex-direction: column;
  width: 80%; 
  height: 100%;
}

.spot-index-world-wrapper {
  display: flex;
  flex-direction: column; 
  width: 100%;
  height: 35vh;
}

.spot-index-world-wrapper h2 {
  font-family: 'cerealRegular';
  font-size: 1.5em;
  letter-spacing: 0.5px;
}

.world-container {
  display: flex;
  flex-direction: row;
  margin-top: 1.5em;
  width: 100%;
  height: 100%;
}

.breezy-hollow-wrapper,
.lost-lure-creek-wrapper,
.saltwater-shores-wrapper,
.sunburst-island-wrapper  {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'cerealRegular';
  font-size: 0.9em;
  font-weight: 900;
  color: var(--gray);
  box-shadow: 3px -1px 10px rgba(0, 0, 0, 0.15);
  text-align: left;
  border-radius: 10px;
  box-sizing: border-box;
  margin-right: 20px;
  width: 17%;
  height: 100%;
}

.breezy-hollow-wrapper p,
.lost-lure-creek-wrapper p,
.saltwater-shores-wrapper p,
.sunburst-island-wrapper p  {
  margin-top: 0.7em;
}

.world-container .image-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 80%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  background: var(--medium-teal);
  overflow: hidden;
}

.image-wrapper img {
  width: 60%;
}

/* Top rated stays styling */

.spot-index-top-wrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 65vh;
  margin-top: 5em;
}

.spot-index-top-wrapper h2 {
  font-family: 'cerealRegular';
  font-size: 1.5em;
  letter-spacing: 0.5px;
}

.spot-index-top-wrapper h3 {
  font-family: 'cerealLight';
  font-size: 1em;
  letter-spacing: 0.5px;
  margin-top: 5px;  
}

.spot-index-top-wrapper ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  list-style: none;
  margin-top: 30px;
  width: 100%;
  height: 100%;
}

.spot-index-top-wrapper ul a {
  text-decoration: none;
  width: 20%;
  height: 65%;
  margin-right: 2em;
}

.spot-index-top-wrapper ul a li {
  width: 100%;
  height: 100%;
}

.spot-index-top-wrapper .image-wrapper {
  width: 100%;
  height: 60%;
}

.spot-index-top-wrapper .image-wrapper img {
  width: 100%;
  height: 100%;
  border-radius: 5px;
}

.spot-index-wrapper .spot-index-top-wrapper ul a li .superhost-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.spot-index-wrapper .spot-index-top-wrapper ul a li .superhost-wrapper p:first-of-type {
  font-family: 'cerealRegular';
  font-size: 13px;
  text-transform: uppercase;
  color: var(--dark-gray);
  border-radius: 5px;
  border: 1px solid var(--dark-gray);
  margin: 10px 5px 0 0;
  padding: 3px 5px;
}

.spot-index-wrapper .spot-index-top-wrapper ul a li .superhost-wrapper p:last-of-type {
  font-family: 'cerealLight';
  font-size: 14px;
  color: var(--gray);
  margin-top: 10px;
}

.spot-index-wrapper .spot-index-top-wrapper ul a li h4 {
  font-family: 'cerealRegular';
  font-size: 16px;
  color: var(--dark-gray);
  margin-top: 5px;
}

.spot-index-wrapper .spot-index-top-wrapper ul a li p {
  font-family: 'cerealLight';
  font-size: 16px;
  color: var(--dark-gray);
  margin-top: 5px;
}

.spot-index-wrapper .spot-index-top-wrapper ul a li p .price-wrapper {
  font-family: 'cerealMedium';
  color: var(--dark-gray); 
}

